fix: include `overflow-y` in fixed-header styles

--- a/dist-css/fixed-header.css
+++ b/dist-css/fixed-header.css
@@ -1,4 +1,5 @@
 .lean-table__header-cell {
+  overflow-y: auto;
   position: sticky;
   top: 0;
   z-index: 100;
